modifier les cards les liens que pour les images

--- a/restaurant/la-note-enchantee.html
+++ b/restaurant/la-note-enchantee.html
@@ -180,7 +180,7 @@
                 </div>
                 <div class="link-footer-2">
                     <a href="#" class="link">Mentions légales</a>
-                    <a href="#" class="link">Contact</a>
+                    <a href="mailto: machkoura.22@gmail.com" class="link">Contact</a>
                 </div>
             </footer>
         </div>
