modifier la button commander

--- a/restaurant/a-la -française.html
+++ b/restaurant/a-la -française.html
@@ -16,8 +16,10 @@
     <body>
         <div class="the-container">
             <header class="header">
-                <a href= "../page-acceuil.html" class="fa-solid fa-arrow-left go-back" ></a>
-                <img class="logo-mobile" src="..//assets/ohmyfood.png" alt="logo">
+                    <a href= "../page-acceuil.html" class="fa-solid fa-arrow-left go-back" ></a>
+                <div class="box-logo">
+                    <img class="logo-mobile" src="..//assets/ohmyfood.png" alt="logo">
+                </div>
             </header>
             <main>
                 <div>
