--- a/restaurant/le-delice-des-sens.html
+++ b/restaurant/le-delice-des-sens.html
@@ -17,7 +17,9 @@
         <div class="the-container">
             <header class="header">
                 <a href="../page-acceuil.html" class="fa-solid fa-arrow-left go-back"> </a>
-                <img  class="logo-mobile" src="..//assets/ohmyfood.png" alt="logo">
+                <div class="box-logo">
+                    <img class="logo-mobile" src="..//assets/ohmyfood.png" alt="logo">
+                </div>
             </header>
             <main>
                 <div>
