--- a/page-acceuil.html
+++ b/page-acceuil.html
@@ -55,7 +55,7 @@
                         <button type="button" class="new-one">Nouveau</button>
                         <div class="card-content">
                             <div class="card-txt">
-                                <h3 class="title">la palette du goût</h3>
+                                <h3 class="title">La palette du goût</h3>
                                 <p class="sub-title">Ménilmontant</p>
                             </div>
                             <i class="like fa-regular fa-heart" aria-hidden="true"> </i>
